examples/deploy/manifest.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: envoy-bouncer
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: envoy-bouncer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy-bouncer
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: envoy-bouncer
  template:
    metadata:
      labels:
        app.kubernetes.io/name: envoy-bouncer
    spec:
      serviceAccountName: envoy-bouncer
      volumes:
        - name: bouncer-config
          configMap:
            name: envoy-bouncer-config
      containers:
        - name: envoy-bouncer
          image: envoy-bouncer
          imagePullPolicy: IfNotPresent
          args:
            - serve
            - --config=config.yaml
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: bouncer-config
              mountPath: /app/config.yaml
              subPath: config.yaml
          resources:
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 128Mi
